<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgcolor"
    tools:context=".GeneratePassword"
    tools:layout_editor_absoluteX="6dp"
    tools:layout_editor_absoluteY="2dp">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="80dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logout_Btn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/btn_green"
        android:text="@string/logout"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/showPassBtn"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_green"
        android:text="@string/passwords"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />


    <TextView
        android:id="@+id/sitetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/site"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <EditText
        android:id="@+id/site_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/sitehint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="@+id/sitetxt"
        app:layout_constraintStart_toStartOf="@+id/sitetxt"
        app:layout_constraintTop_toBottomOf="@+id/sitetxt" />

    <TextView
        android:id="@+id/usertxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/username"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/site_Edit"
        app:layout_constraintStart_toStartOf="@+id/site_Edit"
        app:layout_constraintTop_toBottomOf="@+id/site_Edit" />

    <EditText
        android:id="@+id/username_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="@+id/usertxt"
        app:layout_constraintStart_toStartOf="@+id/usertxt"
        app:layout_constraintTop_toBottomOf="@+id/usertxt" />

    <TextView
        android:id="@+id/passwordtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/username_Edit"
        app:layout_constraintStart_toStartOf="@+id/username_Edit"
        app:layout_constraintTop_toBottomOf="@+id/username_Edit" />

    <EditText
        android:id="@+id/password_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textVisiblePassword"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="@+id/passwordtxt"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/passwordtxt"
        app:layout_constraintTop_toBottomOf="@+id/passwordtxt" />

    <TextView
        android:id="@+id/sizetxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/length"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/password_Edit"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="@+id/password_Edit"
        app:layout_constraintTop_toBottomOf="@+id/password_Edit" />

    <EditText
        android:id="@+id/size_Edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:ems="16"
        android:gravity="center"
        android:hint="@string/size_hint"
        android:inputType="number"
        android:minHeight="48dp"
        android:textColor="@color/white"
        android:textColorHint="@color/hintcolor"
        app:layout_constraintEnd_toEndOf="@+id/sizetxt"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/sizetxt"
        app:layout_constraintTop_toBottomOf="@+id/sizetxt" />

    <ImageView
        android:id="@+id/genPassBtn"
        android:layout_width="72dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/icon"
        android:src="@drawable/generate"
        app:layout_constraintEnd_toEndOf="@+id/size_Edit"
        app:layout_constraintStart_toStartOf="@+id/size_Edit"
        app:layout_constraintTop_toBottomOf="@+id/size_Edit" />

    <Button
        android:id="@+id/savePassBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/btn_green"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/genPassBtn"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="@+id/genPassBtn"
        app:layout_constraintTop_toBottomOf="@+id/genPassBtn"
        app:layout_constraintVertical_bias="0.14"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
