<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:autofillHints=""
    android:background="@color/bgcolor"
    tools:context=".Login">

    <!-- Logo -->
    <ImageView
        android:id="@+id/imageView"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:src="@drawable/lock"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="48dp" />

    <!-- Title -->
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signin_title"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Username Label -->

    <!-- Username Input -->

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="52dp"
        android:text="@string/email"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/userEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:hint="@string/emailhint"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#A6A6A6"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Password Label -->

    <!-- Password Input -->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="36dp"
        android:autofillHints=""
        android:text="@string/password"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEdit" />

    <EditText
        android:id="@+id/passEdit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/inputbox"
        android:hint="@string/passwordhint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="#A6A6A6"
        android:minHeight="48dp"
        app:layout_constraintTop_toBottomOf="@id/textView3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="32dp"
        tools:ignore="VisualLintTextFieldSize" />

    <!-- Checkbox -->

    <!-- Sign In Button -->


    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="48dp"
        android:background="@drawable/btn_green"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passEdit"
        app:layout_constraintVertical_bias="0.393"
        tools:ignore="TextContrastCheck,VisualLintButtonSize" />


</androidx.constraintlayout.widget.ConstraintLayout>
