<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:backgroundTint="#121212"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#121212">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_bg_dark"
        android:padding="16dp">

        <!-- Site Label -->
        <TextView
            android:id="@+id/textViewSite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:textColor="@color/hintcolor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/siteEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/siteEdit" />

        <!-- Site EditText -->
        <AutoCompleteTextView
            android:id="@+id/siteEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/site"
            android:inputType="text"
            android:autofillHints="username"
            android:importantForAutofill="auto"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#00BCD4"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewSite"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <!-- Email Label -->
        <TextView
            android:id="@+id/usernameId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text = "@string/username"
            android:textColor="@color/hintcolor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/usernameEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/usernameEdit" />

        <!-- Email EditText -->
        <EditText
            android:id="@+id/usernameEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#00BCD4"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/usernameId"
            app:layout_constraintTop_toBottomOf="@id/siteEdit"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <!-- Password Label -->
        <TextView
            android:id="@+id/textViewPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/hintcolor"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/passwordEdit"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordEdit" />

        <!-- Password EditText -->
        <EditText
            android:id="@+id/passwordEdit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext_bg"
            android:hint="@string/password"
            android:inputType="textVisiblePassword"
            android:minHeight="48dp"
            android:padding="12dp"
            android:textColor="#00BCD4"
            android:textColorHint="#9E9E9E"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textViewPassword"
            app:layout_constraintTop_toBottomOf="@id/usernameEdit"
            tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/deleteimg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/bin"
            app:layout_constraintEnd_toStartOf="@+id/copyimg"
            app:layout_constraintHorizontal_bias="0.911"
            app:layout_constraintStart_toStartOf="@+id/passwordEdit"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit" />

        <ImageView
            android:id="@+id/copyimg"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/copy"
            app:layout_constraintBottom_toBottomOf="@+id/deleteimg"
            app:layout_constraintEnd_toEndOf="@+id/passwordEdit"
            app:layout_constraintTop_toBottomOf="@+id/passwordEdit"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
